old branding stuff dont merge

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flashify</title>
-    <link rel="icon" type="image/png" href="./logo.png" />
+    <link rel="icon" href="imgs/flashify.ico">
   </head>
   <body>
     <div id="root"></div>
